# security-module

./: .env.example  .gitignore  MIGRATION.md  README.md  __init__.py  cli.py  demo_anythingllm_profile.enriched.json  demo_anythingllm_profile.json  demo_plan.json  docker-compose.yml  fix_targets.py  pipeline.yml  pyproject.toml  pytest.ini  requirements.txt
config/: agent_registry.py  settings.py
core/: agent_fingerprinter.py  base_tester.py  callback_server.py  health_checker.py  http_client.py  preflight.py  redaction.py  ssrf_guard.py  stub_planner.py  target_adapter.py  test_runner.py  tester_registry.py
demo/: ANYTHINGLLM_DEMO.md  DIFY_DEMO.md  ODYSSEUS_DEMO.md  QUICKSTART.md  README.md  docker-compose.anythingllm.yml  docker-compose.ollama.yml  run_anythingllm_demo.ps1  run_anythingllm_demo.sh  run_demo.ps1  run_demo.sh  run_dify_demo.ps1  run_dify_demo.sh  run_full_demo.ps1  run_full_demo.sh  run_odysseus_demo.ps1  run_ollama_demo.ps1  run_ollama_demo.sh
discovery/: __init__.py  manifest_loader.py  openapi_parser.py  well_known_prober.py
liveview/: README.md  go.mod  main.go
llm/: __init__.py  budget.py  client.py  context.py  openai_client.py  payload_synthesizer.py  planner.py  triage.py
models/: agent_config.py  agent_profile.py  enums.py  test_plan.py  test_result.py
payloads/: encoding_payloads.py  injection_payloads.py  poisoning_payloads.py  sql_payloads.py  xpia_payloads.py
reporting/: html_reporter.py  json_reporter.py  junit_reporter.py  sarif_reporter.py  summary.py
sample_configs/: dify_agent.json  dvaa_agent.json  financial_agent.json  full_vuln_agent.json  generic_rest_agent.json  odysseus_agent.enriched.json  odysseus_agent.json  ollama_agent.json  stub_agent_profile_example.json
tests/: conftest.py  test_agent_profile.py  test_cli_v3.py  test_fingerprinter.py  test_full_vuln_agent.py  test_llm_budget.py  test_llm_client.py  test_llm_planner.py  test_llm_synthesizer_and_triage.py  test_llm_wiring.py  test_openai_provider.py  test_openai_shape_adapter.py  test_openapi_parser.py  test_preflight.py  test_redaction.py  test_sample_profiles.py  test_scan_v3_live.py  test_ssrf_guard.py  test_stub_agent.py  test_target_adapter.py  test_tester_registry.py
tests/fixtures/full_vuln_agent/: app.py  server.py
tests/fixtures/stub_agent/: app.py  server.py
tests_asi/: asi01_goal_hijack.py  asi02_tool_misuse.py  asi03_privilege_abuse.py  asi04_supply_chain.py  asi05_code_execution.py  asi06_memory_poisoning.py  asi07_interagent_comms.py  asi08_cascading_failures.py  asi09_trust_exploitation.py  asi10_rogue_agents.py  conftest.py  ext01_log_injection.py  ext02_ltl_chain.py  ext03_consensus_spoofer.py  ext04_entropy_boundary.py  ext05_metamorphic_consistency.py  ext06_z3_constraint_prober.py  ext07_goal_drift.py  ext08_sandbox_isolation.py  ext09_fol_axiom_enforcer.py  ext10_xpia_indirect_injection.py  ext11_mcp_tool_poisoning.py  ext12_alignment_checker.py  ext13_model_extraction.py  ext14_data_poisoning.py  ext15_attribute_inference.py  ext16_cache_poisoning.py  ext17_delivery_hijack.py
