[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owasp-asi-security-tester"
version = "1.0.0"
description = "OWASP ASI Top 10 Security Testing Platform for Agentic AI Systems"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

# Core runtime dependencies — everything needed to run a scan WITHOUT --llm.
# Lower bounds are the minimum verified versions; pin exact builds via the
# generated requirements.lock for reproducible installs.
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "click>=8.1,<9.0",
    "rich>=13.7,<15.0",
    "jinja2>=3.1,<4.0",
    "markupsafe>=2.1,<4.0",
    "rapidfuzz>=3.6,<4.0",
    "aiohttp>=3.9,<4.0",
]

[project.optional-dependencies]
# LLM-assisted planning/triage/fingerprinting (the --llm flag). Install at
# least one provider; the framework auto-detects based on which API key is set.
llm = [
    "openai>=1.50,<2.0",
    "anthropic>=0.40,<1.0",
]
# Test + lint tooling.
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
]
# Deliberately-vulnerable FastAPI fixture used only by the unit tests.
stub = [
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.27,<1.0",
]

[project.scripts]
asi-scan = "cli:cli"

# This repo is a flat collection of packages (no src/ layout). List them
# explicitly so editable installs resolve correctly and no phantom package is
# referenced.
[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tests_asi*", "discovery*", "llm*", "models*", "reporting*", "config*", "payloads*"]

# pytest configuration lives in pytest.ini (single source of truth).
